--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,33 @@
-# Use the official nginx alpine image as base
+# Build stage
+FROM node:20-alpine AS builder
+
+# Set working directory
+WORKDIR /app
+
+# Copy package files
+COPY package*.json ./
+
+# Install dependencies
+RUN npm install
+
+# Copy source code
+COPY . .
+
+# Build the app
+RUN npm run build
+
+# Production stage
 FROM nginx:alpine
 
-# Copy all static assets first
-COPY . /usr/share/nginx/html/
+# Copy built assets from builder stage
+COPY --from=builder /app/build /usr/share/nginx/html/
 
-# Copy custom nginx configuration last
+# Copy custom nginx configuration
 COPY ./docker/nginx.conf /etc/nginx/conf.d/default.conf
+
+# Expose port 80
+EXPOSE 80
+
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
 
