--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -5,12 +5,8 @@ server {
 
   charset utf-8;
 
-  location = / {
-    try_files /index.html =404;
-  }
-
   location / {
-    try_files $uri =404;
+    try_files $uri $uri/ /index.html;
   }
 
   error_log  /var/log/nginx/error.log;
